<resources>
    <string name="app_name">LabStocker</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="under_constr">Site under construction...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgotten_passw">I\'ve forgotten my password</string>
    <string name="keep_logged">Keep logged</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_password">Wrong password</string>
    <string name="email_empty">Email can\'t be empty</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="password_size">Password must be at least 4 characters and less than 12</string>
    <string name="r_password_empty">Repeat password can\'t be empty</string>
    <string name="passwords_match">Passwords don\'t match</string>
    <string name="dialog_message">Account doesn\'t exist, ¿do you want to create it?</string>
    <string name="home">Home</string>
    <string name="career">Career</string>
    <string name="subjects">Subjects</string>
    <string name="subject">Subject</string>
    <string name="resources">Resources</string>
    <string name="places">Places</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="change_name">Change name</string>
    <string name="insert_your_new_name">Insert your new name</string>
    <string name="save">Save</string>
    <string name="new_text">New</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
    <string name="laboratory">Laboratory</string>
    <string name="warehouse">Warehouse</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="practices">Practices</string>
    <string name="reagents">Reagents</string>
    <string name="instruments">Instruments</string>
    <string name="add">Add</string>
    <string name="laboratories">Laboratories</string>
    <string name="warehouses">Warehouses</string>
    <string name="address">Address</string>
    <string name="account_save_error">Account not saved. Try again.</string>
    <string name="account_exists">Account already exists.</string>
    <string name="impossible_check">Impossible to check if the account exists. Try again.</string>
    <string name="choose_a_career">Choose a career</string>
    <string name="impossible_read_accounts">Impossible to read all accounts</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Do you really want to delete it?</string>
    <string name="move_resources">Move resources</string>
    <string name="search">Search</string>
    <string name="select_an_item">Select an item</string>
    <string name="quantity">Quantity</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="searching">Search...</string>
    <string name="search_reagent">Search reagent</string>
    <string name="saved">Saved!</string>
    <string name="deleted">Deleted!</string>
    <string name="practice">Practice</string>
</resources>