<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/subjects_btn"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/subjects"
        app:showAsAction="always" />

    <item
        android:id="@+id/rss_btn"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/resources"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_btn"
        android:checked="true"
        android:icon="@drawable/home_resized"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/calendar_btn"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/calendar"
        app:showAsAction="always" />

    <item
        android:id="@+id/places_btn"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/places"
        app:showAsAction="always" />


</menu>